--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
     "@nx/angular": "^19.7.3",
+    "@nx/esbuild": "19.7.3",
     "@nx/eslint": "19.7.3",
     "@nx/eslint-plugin": "19.7.3",
     "@nx/jest": "19.7.3",
@@ -35,6 +36,7 @@
     "@typescript-eslint/eslint-plugin": "^7.16.0",
     "@typescript-eslint/parser": "^7.16.0",
     "@typescript-eslint/utils": "^7.16.0",
+    "esbuild": "^0.19.2",
     "eslint": "~8.57.0",
     "eslint-config-prettier": "^9.0.0",
     "jest": "^29.7.0",
@@ -59,8 +61,16 @@
     "@angular/router": "~18.2.0",
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
+    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/mongoose": "^10.0.10",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.2",
+    "@nestjs/swagger": "^7.4.2",
     "axios": "^1.6.0",
+    "bcrypt": "^5.1.1",
+    "mongoose": "^8.7.1",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
