--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   },
   "dependencies": {
     "@angular/animations": "~18.2.0",
+    "@angular/cdk": "^18.2.8",
     "@angular/common": "~18.2.0",
     "@angular/compiler": "~18.2.0",
     "@angular/core": "~18.2.0",
@@ -68,9 +69,15 @@
     "@nestjs/swagger": "^7.4.2",
     "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.5",
     "mongoose": "^8.7.1",
+    "normalize.css": "^8.0.1",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "primeflex": "^3.3.1",
+    "primeicons": "^7.0.0",
+    "primeng": "^17.18.11",
+    "quill": "^2.0.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
