--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -10,13 +10,24 @@
     "importHelpers": true,
     "target": "es2015",
     "module": "esnext",
-    "lib": ["es2020", "dom"],
+    "lib": [
+      "es2020",
+      "dom"
+    ],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@angular-nest-mongo/shared-lib": ["shared-lib/src/index.ts"]
+      "@angular-nest-mongo/shared-lib": [
+        "shared-lib/src/index.ts"
+      ],
+      "@shared": [
+        "frontend/src/app/shared/index"
+      ],
     }
   },
-  "exclude": ["node_modules", "tmp"]
+  "exclude": [
+    "node_modules",
+    "tmp"
+  ]
 }
