--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@types/jest": "^29.5.12",
+    "@types/leaflet": "^1.9.12",
     "@types/node": "18.16.9",
     "@typescript-eslint/eslint-plugin": "^7.16.0",
     "@typescript-eslint/parser": "^7.16.0",
@@ -60,6 +61,7 @@
     "@angular/platform-browser": "~18.2.0",
     "@angular/platform-browser-dynamic": "~18.2.0",
     "@angular/router": "~18.2.0",
+    "@asymmetrik/ngx-leaflet": "^18.0.1",
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/jwt": "^10.2.0",
@@ -70,6 +72,7 @@
     "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.5",
+    "leaflet": "^1.9.4",
     "mongoose": "^8.7.1",
     "normalize.css": "^8.0.1",
     "passport-jwt": "^4.0.1",
